Dọn SQLite và sửa kiểm thử dự án