@@ -98,7 +98,7 @@ public class AdminHtmlPortRegressionTest {
     }
 
     private String readText(String modulePath, String projectPath) throws Exception {
-        return Files.readString(timFile(modulePath, projectPath).toPath(), StandardCharsets.UTF_8);
+        return new String(Files.readAllBytes(timFile(modulePath, projectPath).toPath()), StandardCharsets.UTF_8);
     }
 
     private Node timNodeTheoId(Document document, String viewId) {
