@@ -53,7 +53,7 @@ public class DatabaseRepositoryDelegationTest {
     }
 
     private String readText(String modulePath, String projectPath) throws Exception {
-        return Files.readString(timFile(modulePath, projectPath).toPath(), StandardCharsets.UTF_8);
+        return new String(Files.readAllBytes(timFile(modulePath, projectPath).toPath()), StandardCharsets.UTF_8);
     }
 
     private File timFile(String modulePath, String projectPath) {
